# OTA_Update_ESP32S3

./: CMakeCache.txt  CMakeLists.txt  README.md  app-flash_args  cmake_install.cmake  config.env  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  project_description.json
bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
esp-idf/: cmake_install.cmake
esp-idf/app_trace/: cmake_install.cmake
esp-idf/app_update/: cmake_install.cmake
esp-idf/bootloader/: cmake_install.cmake
esp-idf/bootloader_support/: cmake_install.cmake
esp-idf/bt/: cmake_install.cmake
esp-idf/cmock/: cmake_install.cmake
esp-idf/console/: cmake_install.cmake
esp-idf/cxx/: cmake_install.cmake
esp-idf/driver/: cmake_install.cmake
esp-idf/efuse/: cmake_install.cmake
esp-idf/esp-tls/: cmake_install.cmake
esp-idf/esp_adc/: cmake_install.cmake
esp-idf/esp_app_format/: cmake_install.cmake
esp-idf/esp_bootloader_format/: cmake_install.cmake
esp-idf/esp_coex/: cmake_install.cmake
esp-idf/esp_common/: cmake_install.cmake
esp-idf/esp_driver_ana_cmpr/: cmake_install.cmake
esp-idf/esp_driver_cam/: cmake_install.cmake
esp-idf/esp_driver_dac/: cmake_install.cmake
esp-idf/esp_driver_gpio/: cmake_install.cmake
esp-idf/esp_driver_gptimer/: cmake_install.cmake
gdbinit/: gdbinit  symbols
include/: https_server.h  i2c_interface.h  max30102.h  tasks_config.h  wifi_app.h
main/: CMakeLists.txt  https_server.c  i2c_interface.c  main.c  max30102.c  wifi_app.c
main/webpage/: app.css  app.js  index.html
(+92 files in other folders)
